# StockRL-Agent

./: .dockerignore  .env.example  .gitignore  AGENT_MONITORING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  check_users.py  inspect_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_password.py  test_portfolio.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: agent.py  auth.py  market.py  portfolios.py  trades.py
backend/app/data_providers/: __init__.py  alpha_vantage.py  base.py  finnhub.py  mock_provider.py  registry.py  yahoo_finance.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py
backend/app/models/: __init__.py  agent_metric.py  agent_run.py  portfolio.py  position.py  trade.py  user.py
backend/app/rl_agents/: __init__.py  a2c_agent.py  base_agent.py  dqn_agent.py  environment.py  networks.py  observation.py  ppo_agent.py  replay_buffer.py  reward.py
backend/app/schemas/: agent.py  auth.py  market.py  portfolio.py  trade.py
backend/app/services/: agent_manager.py  portfolio_service.py
backend/app/simulator/: __init__.py  broker_adapter.py  executor.py  fees.py  slippage.py
frontend/: .eslintignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  (+1 more)
scripts/: create_demo_user.py  run_local.sh
(+21 files in other folders)
